# SMAK

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.SMAK  README.md  compiling.linux
cmake/: c_overrides.cmake  cxx_overrides.cmake  utils.cmake
common/: CMakeLists.txt  base64.cpp  base64.h  cachedvalue.h  common.h  configfile.cpp  configfile.h  eastl.cpp  files.h  mempool.cpp  mempool.h  mtrand.h  parallelize.cpp  parallelize.h  platform_win32.cpp  quadtree.h  strutils.h  tinker_memory.h  tinker_platform.h  tmap.h  tsort.h  tstring.h  tvector.h  worklistener.h
common/eastl/: CMakeLists.txt
common/math/: color.h  frustum.cpp  frustum.h  geometry.h  maths.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  plane.h  quaternion.cpp  quaternion.h  simplex.h  trs.h  vector.cpp  vector.h
common/sockets/: sockets.cpp  sockets.h
datamanager/: data.cpp  data.h  dataserializer.cpp  dataserializer.h
modelconverter/: CMakeLists.txt  build.bat  convmesh.cpp  convmesh.h  main.cpp  modelconverter.cpp  modelconverter.h  test.dae  test.mtl  test.qc  test.sia  test.smd
modelconverter/formats/: assimp.cpp  collada.cpp  obj.cpp  silo.cpp  smd.cpp
raytracer/: CMakeLists.txt  raytracer.cpp  raytracer.h
smak/: .gitignore  CMakeLists.txt  main.cpp  smak.rc  smak_version.h
smak/crunch/: ao.cpp  ao.h  ao_raytrace.cpp  cavity.cpp  cavity.h  crunch.cpp  crunch.h  normal.cpp  normal.h
smak/icons/: ao.xcf  arrow.xcf  cube.sia  cubewall.sia  eye.xcf  flat.xcf  icons.sib  light.xcf  smooth.xcf  texture.xcf  uv.xcf  wireframe.xcf
smak/models/: loadsource.cpp  models.cpp  models.h
smak/tests/ao/: Head4.sia  beveled box (UVd).mtl  materialAO_test.mtl  occ_test.mtl  test0.sia  test1.sia  test1.xcf  test2.sia  test2.xcf  test3.sia  test4.sia  test4.xcf  test5.sia  test6.sia  test6.xcf  tests.txt
smak/tests/collada/: HatFromXSI.dae  SmakTest3.dae  tests.txt
smak/tests/combo/: bust-diffuse.sia  bust.sia  cube.sia  plane.sia  plane_arch.sia  plane_tilted.sia  plane_x.sia  plane_z.sia  scout-hi.mtl  scout.mtl  sphere.sia  wavy.sia
smak/ui/: aogenerator.cpp  aogenerator.h  buttonpanel.cpp  buttonpanel.h  cavitygenerator.cpp  cavitygenerator.h  combogenerator.cpp  combogenerator.h  normalgenerator.cpp  normalgenerator.h  picker.cpp  picker.h  progressbar.cpp  progressbar.h  scenetree.cpp  scenetree.h  smak_renderer.cpp  smak_renderer.h  smakwindow.cpp  smakwindow.h  smakwindow_input.cpp  smakwindow_ui.cpp  smakwindow_ui.h
tests/: CMakeLists.txt  eangles.cpp  geometry.cpp  main.cpp  matrix.cpp  toys.cpp
tinker/: CMakeLists.txt  application.cpp  application.h  assethandle.h  assethandle_functions.h  console.cpp  console.h  cvar.cpp  cvar.h  profiler.cpp  profiler.h  shell.cpp  shell.h
tinker/glgui/: basecontrol.cpp  basecontrol.h  button.cpp  button.h  checkbox.cpp  checkbox.h  colorpicker.cpp  colorpicker.h  droppablepanel.cpp  droppablepanel.h  filedialog.cpp  filedialog.h  glgui.cpp  glgui.h  label.cpp  label.h  menu.cpp  menu.h  movablepanel.cpp  movablepanel.h  panel.cpp  panel.h  picturebutton.cpp  picturebutton.h  rootpanel.cpp  rootpanel.h  scrollbar.cpp  scrollbar.h  selector.h  slidingpanel.cpp  slidingpanel.h  textfield.cpp  textfield.h  tree.cpp  tree.h
tinker/renderer/: renderer.cpp  renderer.h  renderingcontext.cpp  renderingcontext.h  shaders.cpp  shaders.h
tinker/textures/: materialhandle.h  materiallibrary.cpp  materiallibrary.h  texturehandle.h  texturelibrary.cpp  texturelibrary.h  texturesheet.cpp  texturesheet.h
